# chess_engine

./: .gitignore  CMakeLists.txt  compile.ps1
build-mingw/: debug.txt
include/: Board.h  Const.h  Engine.h  Move.h  UCI.h
src/: Board.cpp  Engine.cpp  Move.cpp  UCI.cpp  main.cpp
